package com.meronmks.zimitta.Activity

import android.support.v7.app.AppCompatActivity
import android.os.Bundle
import com.meronmks.zimitta.R

class ActivityCore : AppCompatActivity() {

    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setContentView(R.layout.activity_core)
    }
}
